--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.firebaseui:firebase-ui-firestore:7.2.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.22'
+    implementation 'androidx.security:security-crypto:1.1.0-alpha02'
 }
